visual changes and animations

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -10,7 +10,7 @@
     /* Colors */
     --primary-color: #FF6D6D;
     --dark-primary-color: #F44F4F;
-    --secondary-color: #77D7D3;
+    --secondary-color: #2bc9c1;
     --tertiary-color: #2E4049;
     --beige-color: #F1EEEC;
     --border-color: #D9D9D9;
